Kubernetes/Truenas/yamls/ig-truenas.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas-service
  labels:
    app: truenas-service
  namespace: traefik-external
subsets:
- addresses:
  - ip: 10.0.50.15
    nodeName: truenas-service
  ports:
  - name: truenas
    port: 443
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: truenas-service
  labels:
    app: truenas-service
  namespace: traefik-external
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: truenas
    port: 443
    targetPort: 443
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-truenas-https-redirect
  namespace: traefik-external
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-truenas-security
  namespace: traefik-external
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-truenas-websecure
  namespace: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`truenas.urbaman.it`)
      services:
        - name: truenas-service
          port: 443
          serversTransport: traefik-truenas-transport
      middlewares:
        - name: traefik-truenas-security
  tls:
    secretName: truenas-urbaman
    options:
      name: traefik-truenas-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-truenas-web
  namespace: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`truenas.urbaman.it`)
      services:
        - name: truenas-service
          port: 443
      middlewares:
        - name: traefik-truenas-https-redirect
